--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,4 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.constraintlayout.widget.ConstraintLayout>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchCompat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="switchCompat"
+        android:textOff="off"
+        android:textOn="on"
+        android:theme="@style/MySwitch"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:showText="false"
+        app:splitTrack="false"
+        app:switchMinWidth="52dp"
+        app:switchPadding="30dp"
+        app:switchTextAppearance="@style/ontextoff"
+        app:thumbTextPadding="10dp"
+        app:thumbTint="@color/colorAccent"
+        app:thumbTintMode="multiply" />
+
+
+    <Switch
+        android:id="@+id/Switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:showText="false"
+        android:splitTrack="false"
+        android:switchMinWidth="52dp"
+        android:switchPadding="30dp"
+        android:switchTextAppearance="@style/ontextoff"
+        android:text="Switch"
+        android:textOff="off"
+        android:textOn="on"
+        android:theme="@style/MySwitch"
+        android:thumbTextPadding="10dp"
+        android:thumbTint="@color/colorAccent"
+        android:thumbTintMode="multiply"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchCompat" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="SwitchMaterial"
+        android:textOff="off"
+        android:textOn="on"
+        android:theme="@style/MySwitch"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Switch"
+        app:showText="true"
+        app:splitTrack="false"
+        app:switchMinWidth="52dp"
+        app:switchPadding="30dp"
+        app:switchTextAppearance="@style/ontextoff"
+        app:thumbTextPadding="10dp"
+        app:thumbTint="@color/colorAccent"
+        app:thumbTintMode="add" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
