--- a/mylibrary/src/main/res/layout/app_title_layout.xml
+++ b/mylibrary/src/main/res/layout/app_title_layout.xml
@@ -68,8 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"
-            android:visibility="gone">
+            android:layout_marginRight="16dp">
 
             <TextView
                 android:id="@+id/tvRight"
