--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,150 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/switchCompat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="switchCompat"
-        android:textOff="off"
-        android:textOn="on"
-        android:theme="@style/MySwitch"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:showText="false"
-        app:splitTrack="false"
-        app:switchMinWidth="52dp"
-        app:switchPadding="30dp"
-        app:switchTextAppearance="@style/ontextoff"
-        app:thumbTextPadding="10dp"
-        app:thumbTint="@color/colorAccent"
-        app:thumbTintMode="multiply" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-
-    <Switch
-        android:id="@+id/Switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:showText="false"
-        android:splitTrack="false"
-        android:switchMinWidth="52dp"
-        android:switchPadding="30dp"
-        android:switchTextAppearance="@style/ontextoff"
-        android:text="Switch"
-        android:textOff="off"
-        android:textOn="on"
-        android:theme="@style/MySwitch"
-        android:thumbTextPadding="10dp"
-        android:thumbTint="@color/colorAccent"
-        android:thumbTintMode="multiply"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchCompat" />
-
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/SwitchMaterial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="SwitchMaterial"
-        android:textOff="off"
-        android:textOn="on"
-        android:theme="@style/MySwitch"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Switch"
-        app:showText="true"
-        app:splitTrack="false"
-        app:switchMinWidth="52dp"
-        app:switchPadding="30dp"
-        app:switchTextAppearance="@style/ontextoff"
-        app:thumbTextPadding="10dp"
-        app:thumbTint="@color/colorAccent"
-        app:thumbTintMode="add" />
-
-    <CheckBox
-        android:id="@+id/CheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/AppCompatCheckBox"
-        app:layout_constraintTop_toBottomOf="@+id/SwitchMaterial" />
-
-    <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/AppCompatCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/CheckBox"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/CheckBox" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CheckBox">
-
-        <RadioButton
-            android:id="@+id/rbMan"
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchCompat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="男"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:layout_marginTop="10dp"
+            android:text="switchCompat"
+            android:textOff="off"
+            android:textOn="on"
+            android:theme="@style/MySwitch"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:showText="false"
+            app:splitTrack="false"
+            app:switchMinWidth="52dp"
+            app:switchPadding="30dp"
+            app:switchTextAppearance="@style/ontextoff"
+            app:thumbTextPadding="10dp"
+            app:thumbTint="@color/colorAccent"
+            app:thumbTintMode="multiply" />
 
-        <RadioButton
-            android:id="@+id/rbWoMan"
+
+        <Switch
+            android:id="@+id/Switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="女"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
-    </RadioGroup>
+            android:layout_marginTop="20dp"
+            android:showText="false"
+            android:splitTrack="false"
+            android:switchMinWidth="52dp"
+            android:switchPadding="30dp"
+            android:switchTextAppearance="@style/ontextoff"
+            android:text="Switch"
+            android:textOff="off"
+            android:textOn="on"
+            android:theme="@style/MySwitch"
+            android:thumbTextPadding="10dp"
+            android:thumbTint="@color/colorAccent"
+            android:thumbTintMode="multiply"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/switchCompat" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="时间"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/SwitchMaterial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="SwitchMaterial"
+            android:textOff="off"
+            android:textOn="on"
+            android:theme="@style/MySwitch"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Switch"
+            app:showText="true"
+            app:splitTrack="false"
+            app:switchMinWidth="52dp"
+            app:switchPadding="30dp"
+            app:switchTextAppearance="@style/ontextoff"
+            app:thumbTextPadding="10dp"
+            app:thumbTint="@color/colorAccent"
+            app:thumbTintMode="add" />
 
-    <TextClock
-        android:id="@+id/textClock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:fontFamily="sans-serif-light"
-        android:format12Hour="yyyy年MM月dd  hh:mm:ss"
-        android:format24Hour="yyyy年MM月dd  HH:mm:ss"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        <CheckBox
+            android:id="@+id/CheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/AppCompatCheckBox"
+            app:layout_constraintTop_toBottomOf="@+id/SwitchMaterial" />
 
-    <NumberPicker
-        android:id="@+id/numberPicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textClock" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/AppCompatCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toRightOf="@+id/CheckBox"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/CheckBox" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/CheckBox">
+
+            <RadioButton
+                android:id="@+id/rbMan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="男"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <RadioButton
+                android:id="@+id/rbWoMan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="女"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="时间"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
+        <TextClock
+            android:id="@+id/textClock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-light"
+            android:format12Hour="yyyy年MM月dd  hh:mm:ss"
+            android:format24Hour="yyyy年MM月dd  HH:mm:ss"
+            android:textSize="16sp"
+            android:textStyle="normal"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
+
+        <NumberPicker
+            android:id="@+id/numberPicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textClock" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="300dp"
+            android:layout_marginTop="20dp"
+            android:layout_height="300dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
