--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -159,11 +159,21 @@
             android:layout_width="300dp"
             android:layout_marginTop="20dp"
             android:layout_height="300dp"
+            android:visibility="gone"
             android:layout_marginBottom="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button" />
+
+        <FrameLayout
+            android:id="@+id/flContain"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
